--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-streamlit-webrtc
-ultralytics==8.1.33
-opencv-python-headless==4.8.0.76
-av
+opencv-python-headless
 Pillow
 numpy
+ultralytics
+streamlit-webrtc
+requests
